--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
           <div class="ratings">
             <div class="rating">
               <div class="stars">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
               </div>
               <p>Rated 5 Stars in Reviews</p>
             </div>
             <div class="rating">
               <div class="stars">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
               </div>
               <p>Rated 5 Stars in Report Guru</p>
             </div>
             <div class="rating">
               <div class="stars">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
-                <img src="./images/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
+                <img src="/icon-star.svg" alt="star">
               </div>
               <p>Rated 5 Stars in BestTech</p>
             </div>
