--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="bottom__grid">
           <div class="user__review">
             <div class="user__details">
-              <img src="./images/image-colton.jpg" alt="colton">
+              <img src="/image-colton.jpg" alt="colton">
               <div class="info">
                 <h5>Colton Smith</h5>
                 <span class="verified">Verified Buyer</span>
@@ -86,7 +86,7 @@
           </div>
           <div class="user__review">
             <div class="user__details">
-              <img src="./images/image-irene.jpg" alt="colton">
+              <img src="/image-irene.jpg" alt="colton">
               <div class="info">
                 <h5>Irene Roberts </h5>
                 <span class="verified">Verified Buyer</span>
@@ -99,7 +99,7 @@
           </div>
           <div class="user__review">
             <div class="user__details">
-              <img src="./images/image-anne.jpg" alt="colton">
+              <img src="/image-anne.jpg" alt="colton">
               <div class="info">
                 <h5>Anne Wallace </h5>
                 <span class="verified">Verified Buyer</span>
